src/test/deca/syntax/valid/added/simple_affectation.deca
// Description:
//    Programme écrivant une instruction simple 
//
// Resultats:
//
//
// Historique:
//    cree le 22/12/2024

{
    int x=4;
}