src/test/deca/syntax/invalid/added/missing_semi.deca
// Description:
//    Programme utilisant une instruction san ;.
//
// Resultats:
//    Ligne 13 : Erreur de syntaxe.
//    le lexer ne doit pas relever d'erreur
//
// Historique:
//    cree le 22/12/2024

{
        println("hello");
        println("hello")
}